syntax = "proto3";

package protocol;

option go_package = "github.com/omochice/toy-socket-chat/pkg/protocol/pb";

// MessageType represents the type of message
enum MessageType {
  // Text message from a user
  MESSAGE_TYPE_TEXT = 0;
  // User joined notification
  MESSAGE_TYPE_JOIN = 1;
  // User left notification
  MESSAGE_TYPE_LEAVE = 2;
}

// Message represents a chat message
message Message {
  // Type of the message
  MessageType type = 1;
  // Username of the sender
  string sender = 2;
  // Content of the message (empty for JOIN/LEAVE)
  string content = 3;
}
